--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ Description: The goal of testDriveR is to provide data sets for teaching statist
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
