--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Depends:
+    R (>= 3.3.3)
 Suggests: dplyr,
     ggplot2,
     testthat
