--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# This is a .gitignore file that specifies for GitHub files that should
+# never be uploaded to your repositories.
+# More details - https://help.github.com/articles/ignoring-files/
+# Source - https://gist.github.com/octocat/9257657
+
 # Compiled source #
 ###################
 *.com
@@ -38,9 +43,41 @@ Thumbs.db
 
 # R files #
 ###########
-.Rproj.user
+# History files
 .Rhistory
+.Rapp.history
+
+# Session Data files
 .RData
 .Ruserdata
-*.dcf
-*.ttc
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+/*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+.Rproj.user
+
+# .Rbuildignore - not needed for lectures/lessons
+.Rbuildignore
