--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,19 @@
 Package: testDriveR
 Type: Package
 Title: Teaching Data for Statistics and Data Science
-Version: 0.3.0
+Version: 0.4.0.9000
 Authors@R: person("Christopher", "Prener", email = "chris.prener@slu.edu",
                   role = c("aut", "cre"))
 Description: The goal of testDriveR is to provide data sets for teaching statistics 
-    and data science courses. These are data that I use for teaching SOC 4930 / SOC 5050 
+    and data science courses. These are data that I use for teaching SOC 4015 / SOC 5050 
     at Saint Louis University.
-License: MIT + file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Depends:
     R (>= 3.3.3)
-Suggests: dplyr,
+Suggests: 
+    dplyr,
     ggplot2,
     testthat
