--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,8 +2,8 @@
 ^\.Rproj\.user$
 ^README\.Rmd$
 ^README-.*\.png$
-^CONDUCT\.md$
 ^\.travis\.yml$
 ^appveyor\.yml$
 ^codecov\.yml$
 ^docs$
+^.github$
