--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: person("Christopher", "Prener", email = "chris.prener@slu.edu",
 Description: The goal of testDriveR is to provide data sets for teaching statistics 
     and data science courses. These are data that I use for teaching SOC 4015 / SOC 5050 
     at Saint Louis University.
-License: GPL-3 + LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
