--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,14 @@ cache: packages
 r:
   - oldrel
   - release
+  - devel
 
 os:
   - linux
   - osx
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - r: devel
+      os: osx
