--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Title: Teaching Data for Statistics and Data Science
 Version: 0.4.0
 Authors@R: person("Christopher", "Prener", email = "chris.prener@slu.edu",
                   role = c("aut", "cre"))
-Description: The goal of testDriveR is to provide data sets for teaching statistics 
-    and data science courses. This package includes a sample of data from John
-    Edmund Kerrich's famous coinflip experiment. These are data that I use for 
-    teaching SOC 4015 / SOC 5050 at Saint Louis University.
+Description: Provides data sets for teaching statistics and data science courses. 
+    This package includes a sample of data from John Edmund Kerrich's famous 
+    coinflip experiment. These are data that I use for teaching SOC 4015 / SOC 
+    5050 at Saint Louis University.
 License: GPL-3
 URL: https://github.com/chris-prener/testDriveR
 BugReports: https://github.com/chris-prener/testDriveR/issues
