--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.4.0
 Authors@R: person("Christopher", "Prener", email = "chris.prener@slu.edu",
                   role = c("aut", "cre"))
 Description: Provides data sets for teaching statistics and data science courses. 
-    This package includes a sample of data from John Edmund Kerrich's famous 
+    It includes a sample of data from John Edmund Kerrich's famous 
     coinflip experiment. These are data that I use for teaching SOC 4015 / SOC 
     5050 at Saint Louis University.
 License: GPL-3
