--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: testDriveR
 Type: Package
 Title: Teaching Data for Statistics and Data Science
-Version: 0.4.0
+Version: 0.5.0.9000
 Authors@R: person("Christopher", "Prener", email = "chris.prener@slu.edu",
                   role = c("aut", "cre"))
 Description: Provides data sets for teaching statistics and data science courses. 
     It includes a sample of data from John Edmund Kerrich's famous 
     coinflip experiment. These are data that I use for teaching SOC 4015 / SOC 
-    5050 at Saint Louis University.
+    5050 at Saint Louis University (SLU). The package also contains an R Markdown
+    template with the required formatting for assignments in my courses 
+    SOC 4015, SOC 4650, SOC 5050, and SOC 5650 at SLU.
 License: GPL-3
 URL: https://github.com/chris-prener/testDriveR
 BugReports: https://github.com/chris-prener/testDriveR/issues
