--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,9 @@ BugReports: https://github.com/chris-prener/testDriveR/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Depends: 
-    knitr,
-    rmarkdown
 Suggests: 
     dplyr,
     ggplot2,
+    knitr,
+    rmarkdown,
     testthat
