add separate index file

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,9 +4,7 @@
 ^\.Rproj\.user$
 ^README\.Rmd$
 ^README-.*\.png$
-^\.travis\.yml$
-^appveyor\.yml$
-^codecov\.yml$
-^docs$
+^index\.Rmd$
+^index\.md$
 ^.github$
 ^_pkgdown\.yml$
